Implementada expulsión automática al cumplirse 48 horas sin llenar formulario

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ ROLLBAR_TOKEN=rollbar.com token
 OWNER_ID=Discord ID of bot owner
 
 GUILD_ID=ID of the guild
+GUILD_INVITE=non-expiring invite link
 WELCOME_CHANNEL=channel where to send the welcome messages
 VERIF_CHANNEL=channel where the users must verify themselves
 LOGS_CHANNEL=logging channel (will log successful authentications and errors)
