--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,14 @@
 name: CI
-on: push
+on: [push, pull_request]
+
 jobs:
   eslint:
+    name: ESLint
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
     - uses: actions/checkout@v2
-    - name: Install npm modules
-      run: npm install
-    - name: Run ESLint
-      run: npm run lint
+    - name: Install npm dependencies and lint
+      run: |
+        npm install
+        npm run-script lint
