Don't allow blocked users to verify

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 DISCORD_TOKEN=Discord token
 ROLLBAR_TOKEN=rollbar.com token
 OWNER_ID=Discord ID of bot owner
+MW_API=https://mediawiki.instance/api.php
 
 GUILD_ID=ID of the guild
 GUILD_INVITE=non-expiring invite link
