--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,12 +3,14 @@ on: [push, pull_request]
 
 jobs:
   eslint:
-    name: ESLint
+    name: Lint and build
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
     - uses: actions/checkout@v2
-    - name: Install npm dependencies and lint
-      run: |
-        npm install
-        npm run-script lint
+    - name: Install npm dependencies
+      run: npm install
+    - name: Run ESLint
+      run: npm run lint
+    - name: Build TypeScript
+      run: npm run build
