--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
     "cron": "^1.8.2",
     "date-fns": "^2.16.1",
     "discord-akairo": "^8.1.0",
-    "discord.js": "^12.5.1",
+    "discord.js": "github:discordjs/discord.js#c4c817116f868cedb4ec20bcbf90b9b3d382621e",
     "esm": "^3.2.25",
-    "rollbar": "^2.19.4",
-    "signale": "^1.4.0",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3",
-    "winston": "^3.3.3"
+    "tslib": "^2.1.0",
+    "winston": "^3.3.3",
+    "winston-discordjs": "^2.1.1",
+    "winston-logzio": "^5.1.2"
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.2",
+    "bufferutil": "^4.0.3",
     "erlpack": "github:discord/erlpack",
-    "utf-8-validate": "^5.0.3",
+    "utf-8-validate": "^5.0.4",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@types/node": "^14.14.20",
+    "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
