--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "consola": "^2.15.0",
     "cron": "^1.8.2",
     "date-fns": "^2.16.1",
     "discord-akairo": "^8.1.0",
     "discord.js": "github:discordjs/discord.js#c4c817116f868cedb4ec20bcbf90b9b3d382621e",
     "esm": "^3.2.25",
+    "mongoose": "^5.11.13",
+    "rollbar": "^2.19.4",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3",
     "tslib": "^2.1.0",
