this doesn't work lol

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "discord.js": "github:discordjs/discord.js#c4c817116f868cedb4ec20bcbf90b9b3d382621e",
     "esm": "^3.2.25",
     "mongoose": "^5.11.13",
-    "rollbar": "^2.19.4",
+    "node-cron": "^2.0.3",
+    "rollbar": "^2.20.0",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3",
     "tslib": "^2.1.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
+    "@types/node-cron": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
