--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
 DISCORD_TOKEN=Discord token
-ROLLBAR_TOKEN=rollbar.com token
+HONEYBADGER_API_KEY=Honeybadger.io api key (optional)
 OWNER_ID=Discord ID of bot owner
 MW_API=https://mediawiki.instance/api.php
 
 GUILD_ID=ID of the guild
 GUILD_INVITE=non-expiring invite link
+
 WELCOME_CHANNEL=channel where to send the welcome messages
 VERIF_CHANNEL=channel where the users must verify themselves
 LOGS_CHANNEL=logging channel (will log successful authentications and errors)
 SELFROLES_CHANNEL=channel where users can pick more roles
+
 NEWUSER_ROLE=role assigned to users when joining
 USER_ROLE=role assigned to users after verifying
+FDUSER_ROLE=additional role assigned to verified Fandom users
 STAFF_ROLE=general role of server staff
 WIKI_ROLE_GROUP=all wiki roles are grouped below this role
