--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ConfeBot",
-  "version": "1.0.0",
+  "version": "2.0.0-dev",
   "description": "Bot de la Confederación de Fandom Hispano",
-  "main": "index.js",
-  "module": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "dev": "cd src && ts-node-dev --transpile-only --respawn index.ts",
     "lint": "eslint src/ --ext .js,.ts",
+    "lint:fix": "eslint src/ --fix --ext .js,.ts",
     "start": "cd dist && node index.js"
   },
   "author": "TheNozomi <13172293+TheNozomi@users.noreply.github.com>",
@@ -15,18 +15,16 @@
   "dependencies": {
     "@honeybadger-io/js": "^3.0.2",
     "axios": "^0.21.1",
-    "consola": "^2.15.0",
     "cron": "^1.8.2",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.17.0",
     "discord-akairo": "^8.1.0",
-    "discord.js": "github:discordjs/discord.js#c4c817116f868cedb4ec20bcbf90b9b3d382621e",
+    "discord.js": "github:discordjs/discord.js#cee6cf70ce76e9b06dc7f25bfd77498e18d7c8d4",
     "esm": "^3.2.25",
-    "mongoose": "^5.11.13",
-    "node-cron": "^2.0.3",
+    "mongoose": "^5.11.15",
+    "signale": "^1.4.0",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3",
-    "tslib": "^2.1.0",
-    "winston": "^3.3.3"
+    "tslib": "^2.1.0"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.3",
@@ -35,12 +33,13 @@
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22",
-    "@types/node-cron": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "eslint": "^7.18.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
+    "@types/cron": "^1.7.2",
+    "@types/node": "^14.14.25",
+    "@types/signale": "^1.4.1",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "2.22.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
