--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
     "date-fns": "^2.17.0",
     "discord-akairo": "^8.1.0",
     "discord.js": "github:discordjs/discord.js#cee6cf70ce76e9b06dc7f25bfd77498e18d7c8d4",
-    "esm": "^3.2.25",
     "mongoose": "^5.11.15",
     "signale": "^1.4.0",
     "string-similarity-js": "^2.1.2",
-    "ts-dotenv": "^0.8.3",
-    "tslib": "^2.1.0"
+    "ts-dotenv": "^0.8.3"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.3",
@@ -34,7 +32,7 @@
   },
   "devDependencies": {
     "@types/cron": "^1.7.2",
-    "@types/node": "^14.14.25",
+    "@types/node": "^14.14.26",
     "@types/signale": "^1.4.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
@@ -42,6 +40,7 @@
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "2.22.1",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.4"
+    "tslib": "^2.1.0",
+    "typescript": "^4.1.5"
   }
 }
