--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build and deploy Docker image
         id: heroku
-        uses: jctaveras/heroku-deploy@2.1.1
+        uses: jctaveras/heroku-deploy@v2.1.1
         with:
           email: ${{ secrets.HEROKU_EMAIL }}
           api_key: ${{ secrets.HEROKU_API_KEY }}
