--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord-paginationembed": "github:gazmull/discord-paginationembed#bcf150b9207c3885884f181d343a592bf9247db2",
     "discord.js": "github:discordjs/discord.js#cee6cf70ce76e9b06dc7f25bfd77498e18d7c8d4",
     "mongoose": "^5.11.15",
+    "node-fetch": "^2.6.1",
     "signale": "^1.4.0",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/cron": "^1.7.2",
     "@types/node": "^14.14.26",
+    "@types/node-fetch": "^2.5.10",
     "@types/signale": "^1.4.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
