--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@honeybadger-io/js": "^3.0.3",
     "axios": "^0.21.1",
+    "color-thief-node": "^1.0.3",
     "cron": "^1.8.2",
     "date-fns": "^2.17.0",
     "discord-akairo": "^8.1.0",
