refactor(seguridad): use random color instead of color-thief (temp?)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+DB_URI=mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
+
 DISCORD_TOKEN=Discord token
 HONEYBADGER_API_KEY=Honeybadger.io api key (optional)
 OWNER_ID=Discord ID of bot owner
@@ -10,9 +12,11 @@ WELCOME_CHANNEL=channel where to send the welcome messages
 VERIF_CHANNEL=channel where the users must verify themselves
 LOGS_CHANNEL=logging channel (will log successful authentications and errors)
 SELFROLES_CHANNEL=channel where users can pick more roles
+REPORTS_CHANNEL=channel for wiki status reports
 
 NEWUSER_ROLE=role assigned to users when joining
 USER_ROLE=role assigned to users after verifying
 FDUSER_ROLE=additional role assigned to verified Fandom users
 STAFF_ROLE=general role of server staff
 WIKI_ROLE_GROUP=all wiki roles are grouped below this role
+SEGURIDAD_ROLE=role for security team members
