--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,15 +34,13 @@ jobs:
     needs: [build]
     steps:
       - uses: actions/checkout@v2
-
-      - name: Build and deploy Docker image
-        id: heroku
-        uses: techmmunity/docker-heroku-deploy@v1.0.0
+      - name: Build and deploy container image
+        uses: gonuit/heroku-docker-deploy@v1.3.3
         with:
           email: ${{ secrets.HEROKU_EMAIL }}
-          api_key: ${{ secrets.HEROKU_API_KEY }}
-          app_name: ${{ secrets.HEROKU_APP_NAME }}
-          formation: 'worker'
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          process_type: 'worker'
       - name: Send deploy notification
         uses: honeybadger-io/github-notify-deploy-action@v1
         with:
