--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ConfeBot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Bot de la Confederación de Fandom Hispano",
   "main": "dist/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "dev": "cd src && ts-node-dev --transpile-only --respawn index.ts",
     "lint": "eslint src/ --ext .js,.ts",
     "lint:fix": "eslint src/ --fix --ext .js,.ts",
-    "start": "cd dist && node index.js"
+    "start": "cd dist && node --enable-source-maps index.js"
   },
   "author": "TheNozomi <13172293+TheNozomi@users.noreply.github.com>",
   "license": "MIT",
