--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Bot de la Confederación de Fandom Hispano",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --project tsconfig.build.json --listEmittedFiles",
     "dev": "cd src && ts-node-dev --transpile-only --respawn index.ts",
-    "lint": "eslint src/ --ext .js,.ts",
-    "lint:fix": "eslint src/ --fix --ext .js,.ts",
-    "start": "cd dist && node --enable-source-maps index.js"
+    "lint": "eslint {src,test}/**/*.{js,ts}",
+    "lint:fix": "eslint --fix {src,test}/**/*.{js,ts}",
+    "start": "cd dist && node --enable-source-maps index.js",
+    "test": "mocha -r esbuild-register test/**/*.test.ts"
   },
   "author": "TheNozomi <13172293+TheNozomi@users.noreply.github.com>",
   "license": "MIT",
@@ -33,15 +34,23 @@
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.17",
+    "@types/chai-as-promised": "^7.1.3",
     "@types/cron": "^1.7.2",
+    "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.26",
     "@types/node-fetch": "^2.5.10",
     "@types/signale": "^1.4.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "esbuild-register": "^2.5.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "2.22.1",
+    "esmon": "^1.0.3",
+    "mocha": "^8.3.2",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
   }
