--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint {src,test}/**/*.{js,ts}",
     "lint:fix": "eslint --fix {src,test}/**/*.{js,ts}",
     "start": "cd dist && node --enable-source-maps index.js",
-    "test": "mocha -r esbuild-register test/**/*.test.ts"
+    "test": "mocha -r ts-node/register test/**/*.test.ts"
   },
   "author": "TheNozomi <13172293+TheNozomi@users.noreply.github.com>",
   "license": "MIT",
@@ -21,7 +21,7 @@
     "discord-akairo": "^8.1.0",
     "discord-paginationembed": "github:gazmull/discord-paginationembed#bcf150b9207c3885884f181d343a592bf9247db2",
     "discord.js": "github:discordjs/discord.js#cee6cf70ce76e9b06dc7f25bfd77498e18d7c8d4",
-    "mongoose": "^5.11.15",
+    "mongoose": "^5.12.7",
     "signale": "^1.4.0",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3",
@@ -30,7 +30,7 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.3",
     "erlpack": "github:discord/erlpack",
-    "utf-8-validate": "^5.0.4",
+    "utf-8-validate": "^5.0.5",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
@@ -38,19 +38,18 @@
     "@types/chai-as-promised": "^7.1.3",
     "@types/cron": "^1.7.2",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^14.14.26",
+    "@types/node": "^15.0.1",
     "@types/node-fetch": "^2.5.10",
     "@types/signale": "^1.4.1",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "esbuild-register": "^2.5.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "2.22.1",
-    "esmon": "^1.0.3",
     "mocha": "^8.3.2",
+    "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
   }
