--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
   "outDir": "../dist",
   "rootDir": "./src",
   "include": [
-    "./src/**/*.ts"
+    "./src/**/*.ts",
+    "./test/**/*.ts"
   ]
 }
