Added Security daily reports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,10 @@
     "moduleResolution": "node",
     "noEmitHelpers": true,
     "outDir": "dist",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ],
     "skipLibCheck": true
   },
   "outDir": "../dist",
