--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
   "dependencies": {
     "@honeybadger-io/js": "^3.2.2",
     "@sapphire/decorators": "^2.2.0",
-    "@sapphire/discord-utilities": "^2.1.5",
     "@sapphire/discord.js-utilities": "^2.0.2",
     "@sapphire/framework": "^1.0.2",
     "@sapphire/plugin-logger": "^1.0.13",
     "axios": "^0.21.1",
     "cron": "^1.8.2",
     "date-fns": "^2.23.0",
-    "discord.js": "^13.0.0-dev.652c683da7032a147313b4a8db043be5385e0656",
-    "mongoose": "^5.13.4",
+    "discord.js": "13.0.0-dev.652c683da7032a147313b4a8db043be5385e0656",
+    "mongoose": "^5.13.5",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3"
   },
@@ -42,10 +41,10 @@
     "@types/chai-as-promised": "^7.1.4",
     "@types/cron": "^1.7.3",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.4.7",
+    "@types/node": "^16.4.13",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.31.0",
+    "eslint": "^7.32.0",
     "mocha": "^9.0.3",
     "rimraf": "^3.0.2",
     "ts-node": "^10.1.0",
