--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-  "extends": "@sapphire"
+  "extends": ["@sapphire"],
+  "rules": {
+    "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "warn",
+    "@typescript-eslint/member-ordering": "warn",
+    "@typescript-eslint/no-extraneous-class": "off",
+    "@typescript-eslint/unbound-method": "off",
+    "no-console": "warn",
+    "no-duplicate-imports": "off",
+    "one-var": "off"
+  }
 }
