--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "ts-dotenv": "^0.8.3"
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.3",
-    "utf-8-validate": "^5.0.5"
+    "bufferutil": "^4.0.5",
+    "erlpack": "github:discord/erlpack",
+    "utf-8-validate": "^5.0.7",
+    "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@sapphire/eslint-config": "^4.0.1",
