--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sapphire/decorators": "^3.1.2",
     "@sapphire/discord.js-utilities": "^3.2.2",
     "@sapphire/framework": "^2.1.3",
+    "@sapphire/pieces": "^3.1.0",
     "@sapphire/plugin-logger": "^2.0.1",
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
