--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "@sapphire/decorators": "^3.1.2",
     "@sapphire/discord.js-utilities": "^3.2.2",
     "@sapphire/framework": "^2.1.3",
+    "@sapphire/pieces": "^3.1.0",
     "@sapphire/plugin-logger": "^2.0.1",
     "axios": "^0.21.1",
-    "cron": "^1.8.2",
     "date-fns": "^2.23.0",
     "discord.js": "^13.2.0",
     "mongoose": "^6.0.12",
+    "node-cron": "^3.0.0",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3"
   },
@@ -42,9 +43,9 @@
     "@sapphire/ts-config": "^3.1.2",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
-    "@types/cron": "^1.7.3",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.13",
+    "@types/node-cron": "^3.0.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "eslint": "^8.1.0",
