--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "axios": "^0.21.1",
     "date-fns": "^2.23.0",
     "discord.js": "^13.2.0",
+    "lua-json": "^1.0.0",
     "mongoose": "^6.0.12",
+    "mw.js": "^1.5.2",
     "node-cron": "^3.0.0",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3"
@@ -43,6 +45,7 @@
     "@sapphire/ts-config": "^3.1.2",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
+    "@types/lua-json": "^1.0.0",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.13",
     "@types/node-cron": "^3.0.0",
