chore(tsc): enable experimental decorators

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "./node_modules/@types",
       "./src/types"
     ],
-    "skipLibCheck": true
+    "skipLibCheck": true,
+	"experimentalDecorators": true
   },
   "outDir": "../dist",
   "rootDir": "./src",
