chore: add environment variable for starboard channel

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ VERIF_CHANNEL=channel where the users must verify themselves
 LOGS_CHANNEL=logging channel (will log successful authentications and errors)
 SELFROLES_CHANNEL=channel where users can pick more roles
 REPORTS_CHANNEL=channel for wiki status reports
+STARBOARD_CHANNEL=channel for pinned messages
 
 NEWUSER_ROLE=role assigned to users when joining
 USER_ROLE=role assigned to users after verifying
