refactor(ScheduledTasks): use `@sapphire/plugin-scheduled-tasks`

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DB_URI=mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
+REDIS_URI=redis://redis:6379
+
 DISCORD_TOKEN=Discord token
 HONEYBADGER_API_KEY=Honeybadger.io api key (optional)
 OWNER_ID=Discord ID of bot owner
