--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "@honeybadger-io/js": "^3.2.4",
     "@sapphire/decorators": "^3.1.2",
     "@sapphire/discord.js-utilities": "^3.2.2",
-    "@sapphire/framework": "^2.1.3",
+    "@sapphire/framework": "^2.3.0",
     "@sapphire/pieces": "^3.1.0",
     "@sapphire/plugin-logger": "^2.0.1",
+    "@sapphire/plugin-scheduled-tasks": "^2.1.0",
+    "@sapphire/stopwatch": "^1.2.5",
     "axios": "^0.21.1",
+    "bull": "^4.2.0",
     "date-fns": "^2.23.0",
     "discord.js": "^13.2.0",
     "mongoose": "^6.0.12",
@@ -39,7 +42,7 @@
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@sapphire/eslint-config": "^4.0.1",
+    "@sapphire/eslint-config": "^4.0.9",
     "@sapphire/ts-config": "^3.1.2",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
@@ -48,7 +51,7 @@
     "@types/node-cron": "^3.0.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^8.1.0",
+    "eslint": "~8.6.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.3",
     "mocha": "^9.0.3",
