--- a/.gitignore
+++ b/.gitignore
@@ -105,4 +105,12 @@ dist
 
 # Lockfiles from other package managers
 pnpm-lock.yaml
-yarn.lock
+
+# Yarn stuff
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
