--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "2.1.0",
   "description": "Bot de la Confederación de Fandom Hispano",
   "main": "dist/index.js",
-  "imports": {
-    "#lib/*": "./dist/lib/*.js"
-  },
   "scripts": {
     "build": "tsc --project tsconfig.build.json --listEmittedFiles",
     "dev": "rimraf dist/ && tsc-watch --project tsconfig.build.json --noClear --onSuccess \"node --enable-source-maps ./dist/index.js\"",
@@ -18,6 +15,7 @@
   "author": "TheNozomi <13172293+TheNozomi@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "@confebot/lib": "link:dist/lib",
     "@honeybadger-io/js": "^3.2.4",
     "@sapphire/decorators": "^3.1.2",
     "@sapphire/discord.js-utilities": "^3.2.2",
@@ -46,22 +44,28 @@
     "@sapphire/ts-config": "^3.1.2",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
-    "@types/mocha": "^9.0.0",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^16.4.13",
     "@types/node-cron": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "eslint": "~8.6.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^11.2.3",
     "mocha": "^9.0.3",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.4.0",
     "tsc-watch": "^4.5.0",
     "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.3.5"
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
   },
   "lint-staged": {
     "*.ts": "eslint --cache --fix"
-  }
+  },
+  "packageManager": "yarn@3.1.1"
 }
