--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,6 @@
   "extends": "@sapphire/ts-config",
   "compilerOptions": {
     "baseUrl": "./src",
-    "paths": {
-      "#lib/*": ["lib/*"]
-    },
     "target": "ES2020",
     "lib": [
       "ESNext",
@@ -30,5 +27,8 @@
   "include": [
     "./src/**/*.ts",
     "./test/**/*.ts"
+  ],
+  "exclude": [
+    "dist"
   ]
 }
