--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "discord.js": "^13.2.0",
     "mongoose": "^6.0.12",
     "node-cron": "^3.0.0",
+    "skia-canvas": "^0.9.28",
     "string-similarity-js": "^2.1.2",
     "ts-dotenv": "^0.8.3"
   },
