--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,5 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["github>sapphiredev/readme:sapphire-renovate"]
+	"extends": ["github>sapphiredev/readme:sapphire-renovate"],
+	"schedule": "after 10pm and before 5am every weekday"
 }
