--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.4.13",
     "@types/node-cron": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "eslint": "~8.6.0",
