refactor(ArrestCommand): use chromium service

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
 DB_URI=mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
 REDIS_URI=redis://redis:6379
+CHROMIUM_URI=WebSocket URI of a https://github.com/browserless/chrome instance
 
 DISCORD_TOKEN=Discord token
 HONEYBADGER_API_KEY=Honeybadger.io api key (optional)
 OWNER_ID=Discord ID of bot owner
 MW_API=https://mediawiki.instance/api.php
+TEMPLATE_BASE_URL=https://confebot-templates.netlify.app
 
 GUILD_ID=ID of the guild
 GUILD_INVITE=non-expiring invite link
