--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "ESNext.Symbol",
       "ESNext.BigInt"
     ],
+    "experimentalDecorators": true,
     "importsNotUsedAsValues": "preserve",
     "noUnusedLocals": false,
     "noUnusedParameters": false,
@@ -23,7 +24,7 @@
       "./src/types"
     ],
     "skipLibCheck": true,
-	"experimentalDecorators": true
+    "useUnknownInCatchVariables": false
   },
   "outDir": "../dist",
   "rootDir": "./src",
