--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,5 @@
 enableGlobalCache: true
+nodeLinker: node-modules
 
 packageExtensions:
   "@sapphire/decorators@*":
@@ -17,5 +18,13 @@ packageExtensions:
     dependencies:
       "@sapphire/framework": "*"
       discord.js: "*"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
+    spec: "@yarnpkg/plugin-workspace-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
+    spec: "@yarnpkg/plugin-typescript"
 
 yarnPath: .yarn/releases/yarn-3.1.1.cjs
