--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,22 @@
-version: '3.9'
+version: '3.8'
 
 services:
   bot:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./
       target: development
+    container_name: confebot
+    command: yarn run dev
+    image: confebot:dev-latest
+    restart: unless-stopped
+    tty: true
     env_file:
       - .env
     environment:
       - DB_URI=mongodb://root:example@mongo:27017/confebot_local?authSource=admin&retryWrites=true&w=majority
       - REDIS_URI=redis://redis:6379
     volumes:
-      - .:/home/node/app
-      - bot_node_modules:/home/node/app/node_modules
+      - "${PWD}/src:/home/node/app/src/"
   redis:
     image: 'redis:alpine'
     ports:
@@ -33,6 +36,3 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-
-volumes:
-  bot_node_modules:
