--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mongoose": "^6.0.12",
     "node-cron": "^3.0.0",
     "string-similarity-js": "^2.1.2",
-    "ts-dotenv": "^0.8.3"
+    "ts-dotenv": "^0.8.3",
+    "tslib": "^2.3.1"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.5",
@@ -60,7 +61,6 @@
     "ts-node": "^10.4.0",
     "tsc-watch": "^4.5.0",
     "tsconfig-paths": "^3.11.0",
-    "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   },
   "lint-staged": {
