--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -19,7 +19,7 @@ env:
 
 jobs:
   Publish:
-    name: Publish ConfeBot image to GHCR
+    name: Publish image to GHCR
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Project
@@ -57,3 +57,5 @@ jobs:
             BUILD_NUMBER=${{ github.run_number }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
