ci: add yarn.lock to paths
Para cuando haya PRs que solo recreen el lockfile

--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -10,6 +10,7 @@ on:
       - 'Dockerfile'
       - '.github/workflows/continuous-delivery.yml'
       - 'package.json'
+      - 'yarn.lock'
 
 env:
   # Uses docker.io for Docker Hub if empty
