style: remove ammmsiedadmmm

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -86,6 +86,7 @@
     "@typescript-eslint/unbound-method": "off",
     "@typescript-eslint/unified-signatures": "error",
     "accessor-pairs": "off",
+    "array-bracket-spacing": ["error", "never"],
     "array-callback-return": "error",
     "block-scoped-var": "error",
     "callback-return": "off",
@@ -293,6 +294,7 @@
     "sort-imports": "off",
     "sort-keys": "off",
     "sort-vars": "off",
+    "space-in-parens": ["error", "never"],
     "spaced-comment": ["error", "always"],
     "strict": ["error", "never"],
     "symbol-description": "warn",
