--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@honeybadger-io/js": "^3.2.7",
     "@sapphire/decorators": "^3.1.6",
     "@sapphire/discord.js-utilities": "^3.2.2",
-    "@sapphire/framework": "^2.4.0",
+    "@sapphire/framework": "next",
     "@sapphire/pieces": "^3.2.0",
     "@sapphire/plugin-logger": "^2.1.3",
     "@sapphire/plugin-scheduled-tasks": "^2.2.0",
