chore(eslint): mandatory semicolons

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -291,6 +291,7 @@
     "require-await": "off",
     "require-jsdoc": "off",
     "require-yield": "warn",
+    "semi": ["error", "always"],
     "sort-imports": "off",
     "sort-keys": "off",
     "sort-vars": "off",
