--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -14,6 +14,7 @@ packageExtensions:
   "@sapphire/framework@*":
     dependencies:
       discord.js: "*"
+      "@discordjs/builders": "*"
   "@sapphire/plugin-logger@*":
     dependencies:
       "@sapphire/framework": "*"
