--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bull": "^4.5.2",
     "date-fns": "^2.28.0",
     "discord.js": "^13.6.0",
+    "fs-extra": "^10.0.0",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.1",
     "node-cron": "^3.0.0",
@@ -46,6 +47,7 @@
     "@sapphire/ts-config": "^3.3.1",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.24",
     "@types/node-cron": "^3.0.1",
