--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@honeybadger-io/js": "^3.2.7",
     "@sapphire/decorators": "^3.1.6",
     "@sapphire/discord.js-utilities": "^3.2.2",
-    "@sapphire/framework": "next",
+    "@sapphire/framework": "3.0.0-next.1d89b7f.0",
     "@sapphire/pieces": "^3.2.0",
     "@sapphire/plugin-logger": "^2.1.3",
     "@sapphire/plugin-scheduled-tasks": "^2.2.0",
@@ -68,5 +68,8 @@
   "lint-staged": {
     "*.ts": "eslint --cache --fix"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.1.1",
+  "resolutions": {
+    "@sapphire/framework@3.0.0-next.1d89b7f.0": "patch:@sapphire/framework@npm:3.0.0-next.1d89b7f.0#.yarn/patches/@sapphire-framework-npm-3.0.0-next.1d89b7f.0-1dc3096681"
+  }
 }
