--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -109,6 +109,7 @@
     "id-blacklist": "off",
     "id-length": "off",
     "id-match": "off",
+    "indent": ["error", 2],
     "init-declarations": "off",
     "line-comment-position": "off",
     "lines-between-class-members": [
