feat: we don't talk about slashies, no, no, no (#230)
* chore(deps): add mongodb

* feat: add mongo client to container

* fix: mongo client, not mongo provider

* fix: actually, db, not mongo client

* chore: add mongodb folder because sometimes i am lazy to find a connection uri

* feat: see you in hell, mongoose

* style: remove ammmsiedadmmm

* chore(deps): bump @sapphire/framework to next

* chore(eslint): mandatory semicolons

* feat: register chat input commands data manager

* chore: add package extension for @sapphire/framework

* chore(deps): add fs-extra

* chore: patch @sapphire/framework to emit an event after loading application commands

* feat(listeners): command registry finish

* feat: slashify ping command

* style: lintea como si no hubiera un mañana

* style: fix ugly array

* style: indent consistently

* fix: load message command listeners

* chore: ignore slash-settings.json

* feat: slashify stat command

* fix: remove unused variable

* feat: slashify user lookup

* feat: slashify reverse lookup

* feat: slashify arrest

* feat: slashify starboard

* feat: slashify user associate

* feat: slashify user verify

* chore(deps): remove mongoose

* fix: precondition for slash commands

* fix(ArrestCommand): actually reply to interaction

* fix(UserAssociateCommand): remove unused client

* fix(ReadyListener): ensure client.cache is defined

* ci: remove deploy job, use yarn cache

* ci: added codeql action

* chore(eslint): unused variables

Co-authored-by: TheNozomi <13172293+TheNozomi@users.noreply.github.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,7 +70,7 @@
     "@typescript-eslint/no-unsafe-call": "off",
     "@typescript-eslint/no-unsafe-member-access": "off",
     "@typescript-eslint/no-unsafe-return": "off",
-    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-useless-constructor": "error",
     "@typescript-eslint/no-var-requires": "error",
@@ -109,6 +109,7 @@
     "id-blacklist": "off",
     "id-length": "off",
     "id-match": "off",
+    "indent": ["error", 2],
     "init-declarations": "off",
     "line-comment-position": "off",
     "lines-between-class-members": [
@@ -291,6 +292,7 @@
     "require-await": "off",
     "require-jsdoc": "off",
     "require-yield": "warn",
+    "semi": ["error", "always"],
     "sort-imports": "off",
     "sort-keys": "off",
     "sort-vars": "off",
