--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@honeybadger-io/js": "^3.2.7",
     "@sapphire/decorators": "^3.1.6",
     "@sapphire/discord.js-utilities": "^3.2.2",
-    "@sapphire/framework": "^2.4.0",
+    "@sapphire/framework": "3.0.0-next.1d89b7f.0",
     "@sapphire/pieces": "^3.2.0",
     "@sapphire/plugin-logger": "^2.1.3",
     "@sapphire/plugin-scheduled-tasks": "^2.2.0",
@@ -27,8 +27,8 @@
     "bull": "^4.5.2",
     "date-fns": "^2.28.0",
     "discord.js": "^13.6.0",
+    "fs-extra": "^10.0.0",
     "mongodb": "^4.3.1",
-    "mongoose": "^6.2.1",
     "node-cron": "^3.0.0",
     "puppeteer-core": "^13.2.0",
     "string-similarity-js": "^2.1.4",
@@ -46,6 +46,7 @@
     "@sapphire/ts-config": "^3.3.1",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.24",
     "@types/node-cron": "^3.0.1",
@@ -66,5 +67,8 @@
   "lint-staged": {
     "*.ts": "eslint --cache --fix"
   },
-  "packageManager": "yarn@3.1.1"
+  "packageManager": "yarn@3.1.1",
+  "resolutions": {
+    "@sapphire/framework@3.0.0-next.1d89b7f.0": "patch:@sapphire/framework@npm:3.0.0-next.1d89b7f.0#.yarn/patches/@sapphire-framework-npm-3.0.0-next.1d89b7f.0-1dc3096681"
+  }
 }
