--- a/.github/workflows/container-retention-policy.yml
+++ b/.github/workflows/container-retention-policy.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 0 * * *'  # every day at midnight
   workflow_dispatch:
 
+permissions:
+  packages:
+    - read
+    - delete
 
 jobs:
   clean-ghcr:
