--- a/.github/workflows/container-retention-policy.yml
+++ b/.github/workflows/container-retention-policy.yml
@@ -5,7 +5,6 @@ on:
     - cron: '0 0 * * *'  # every day at midnight
   workflow_dispatch:
 
-
 jobs:
   clean-ghcr:
     name: Delete old unused container images
@@ -19,4 +18,4 @@ jobs:
           account-type: org
           org-name: confederacionhispana
           keep-at-least: 5
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.DELETE_PACKAGES_TOKEN }}
