--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "author": "TheNozomi <13172293+TheNozomi@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "@bitomic/plugin-application-commands": "^1.1.1",
     "@honeybadger-io/js": "^3.2.8",
     "@sapphire/decorators": "^3.1.6",
     "@sapphire/discord.js-utilities": "^3.2.2",
-    "@sapphire/framework": "3.0.0-next.1d89b7f.0",
+    "@sapphire/framework": "2.4.1",
     "@sapphire/pieces": "^3.2.0",
     "@sapphire/plugin-logger": "^2.1.3",
     "@sapphire/plugin-scheduled-tasks": "^2.2.0",
@@ -67,8 +68,5 @@
   "lint-staged": {
     "*.ts": "eslint --cache --fix"
   },
-  "packageManager": "yarn@3.2.0",
-  "resolutions": {
-    "@sapphire/framework@3.0.0-next.1d89b7f.0": "patch:@sapphire/framework@npm:3.0.0-next.1d89b7f.0#.yarn/patches/@sapphire-framework-npm-3.0.0-next.1d89b7f.0-1dc3096681"
-  }
+  "packageManager": "yarn@3.2.0"
 }
