--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "rimraf dist/ && tsc-watch --project tsconfig.build.json --noClear --onSuccess \"node --enable-source-maps ./dist/index.js\"",
     "lint": "eslint src/ --ext ts",
     "lint:fix": "eslint src/ --ext ts --fix",
-    "start": "node --enable-source-maps ./dist/index.js",
+    "start": "yarn node --enable-source-maps ./dist/index.js",
     "test": "mocha dist/test",
     "prepare": "husky install"
   },
@@ -21,6 +21,7 @@
     "@sapphire/discord.js-utilities": "^4.9.3",
     "@sapphire/framework": "2.4.1",
     "@sapphire/pieces": "^3.2.0",
+    "@sapphire/plugin-api": "^3.2.0",
     "@sapphire/plugin-logger": "^2.1.3",
     "@sapphire/plugin-scheduled-tasks": "^2.2.0",
     "@sapphire/stopwatch": "^1.3.0",
