feat(logs): implemented message update and deletion logs

--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "axios": "^0.26.0",
     "bull": "^4.6.2",
     "date-fns": "^2.28.0",
+    "diff": "^5.0.0",
     "discord.js": "^13.6.0",
     "fs-extra": "^10.0.1",
+    "mime-types": "^2.1.35",
     "mongodb": "^4.4.0",
     "node-cron": "^3.0.0",
     "puppeteer-core": "^13.4.0",
@@ -48,7 +50,9 @@
     "@sapphire/ts-config": "^3.3.1",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
+    "@types/diff": "^5.0.2",
     "@types/fs-extra": "^9.0.13",
+    "@types/mime-types": "^2.1.1",
     "@types/mocha": "^9.1.0",
     "@types/node": "^16.11.26",
     "@types/node-cron": "^3.0.1",
