--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@honeybadger-io/js": "^3.2.8",
     "@sapphire/decorators": "^4.3.3",
     "@sapphire/discord.js-utilities": "^4.9.3",
-    "@sapphire/framework": "2.4.1",
+    "@sapphire/framework": "^3.0.0-next.961e0bf.0",
     "@sapphire/pieces": "^3.2.0",
     "@sapphire/plugin-api": "^3.2.0",
     "@sapphire/plugin-logger": "^2.1.3",
@@ -27,7 +27,7 @@
     "axios": "^0.26.0",
     "bull": "^4.6.2",
     "date-fns": "^2.28.0",
-    "discord.js": "^13.6.0",
+    "discord.js": "^13.8.1",
     "fs-extra": "^10.0.1",
     "mongodb": "^4.4.0",
     "node-cron": "^3.0.0",
