chore: yarnrc.yml package extensions

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,19 +6,19 @@ packageExtensions:
     dependencies:
       "@sapphire/discord.js-utilities": "*"
       "@sapphire/framework": "*"
-      discord.js: "*"
+      discord.js: "^13.8.1"
   "@sapphire/discord.js-utilities@*":
     dependencies:
       discord-api-types: "*"
-      discord.js: "*"
+      discord.js: "^13.8.1"
   "@sapphire/framework@*":
     dependencies:
-      discord.js: "*"
+      discord.js: "^13.8.1"
       "@discordjs/builders": "*"
   "@sapphire/plugin-logger@*":
     dependencies:
       "@sapphire/framework": "*"
-      discord.js: "*"
+      discord.js: "^13.8.1"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
