--- a/package.json
+++ b/package.json
@@ -15,20 +15,20 @@
   "author": "TheNozomi <13172293+TheNozomi@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
-    "@bitomic/plugin-application-commands": "^1.1.1",
     "@honeybadger-io/js": "^3.2.8",
-    "@sapphire/decorators": "^4.3.3",
-    "@sapphire/discord.js-utilities": "^4.9.3",
-    "@sapphire/framework": "2.4.1",
-    "@sapphire/pieces": "^3.2.0",
-    "@sapphire/plugin-api": "^3.2.0",
-    "@sapphire/plugin-logger": "^2.1.3",
-    "@sapphire/plugin-scheduled-tasks": "^2.2.0",
-    "@sapphire/stopwatch": "^1.3.0",
+    "@sapphire/decorators": "^4.3.7",
+    "@sapphire/discord.js-utilities": "^4.11.3",
+    "@sapphire/framework": "^3.0.0-next.961e0bf.0",
+    "@sapphire/pieces": "^3.3.4",
+    "@sapphire/plugin-api": "^3.2.2",
+    "@sapphire/plugin-logger": "^2.2.2",
+    "@sapphire/plugin-scheduled-tasks": "^2.3.4",
+    "@sapphire/stopwatch": "^1.4.1",
     "axios": "^0.26.0",
     "bull": "^4.6.2",
     "date-fns": "^2.28.0",
-    "discord.js": "^13.6.0",
+    "discord-api-types": "^0.36.1",
+    "discord.js": "^13.8.1",
     "fs-extra": "^10.0.1",
     "mongodb": "^4.4.0",
     "node-cron": "^3.0.0",
@@ -44,7 +44,7 @@
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@sapphire/eslint-config": "^4.2.2",
+    "@sapphire/eslint-config": "^4.3.7",
     "@sapphire/ts-config": "^3.3.1",
     "@types/chai": "^4.3.0",
     "@types/chai-as-promised": "^7.1.5",
